--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 .qurbani-now {
   background-image: linear-gradient(
       to left,
-      rgba(245, 246, 252, 0.881),
+      rgba(215, 216, 225, 0.881),
       rgba(54, 22, 46, 0.73)
     ),
     url(image/stock-vector-eid-al-adha-mubarak-background-design-1154473507.jpg);
@@ -21,10 +21,14 @@ html {
 }
 .qurbani-now > h1 {
   color: #fff;
-  font-size: 40px;
+  font-size: 60px;
+}
+.lets {
+  color: crimson;
 }
 .qurbani-now p {
   font-size: 20px;
+  color: #fff;
 }
 .donate-btn {
   background-color: crimson;
@@ -36,7 +40,7 @@ html {
   border-radius: 5px;
 }
 h1 {
-  font-size: 40px;
+  font-size: 50px;
 }
 p {
   color: gray;
@@ -65,6 +69,7 @@ p {
   margin: 22px;
   height: 200px;
   padding-top: 20px;
+  border-radius: 8px;
 }
 .icon {
   padding: 25px;
