--- a/style.css
+++ b/style.css
@@ -51,9 +51,13 @@ p {
   justify-content: space-evenly;
   margin-bottom: 100px;
 }
+iframe {
+  border-radius: 20px;
+}
 .boy {
   height: 350px;
   width: 300px;
+  border-radius: 20px;
 }
 .description {
   text-align: center;
@@ -81,32 +85,40 @@ p {
   flex-wrap: wrap;
   margin-bottom: 100px;
 }
-.img3 {
+.img-praying {
   width: 25%;
   height: 300px;
   padding: 10px;
+  border-radius: 25px;
 }
 .img-section {
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
 }
+
 .note {
   text-align: center;
 }
 .card-sec {
   display: flex;
   justify-content: center;
+  margin-bottom: 70px;
 }
 .card {
   width: 25%;
 
   margin: 10px;
 }
+.card img {
+  border-radius: 8px 8px 0 0;
+}
 .container {
-  padding: 0 8px 8px 8px;
+  padding: 20px 8px 8px 8px;
   border: 1px solid gray;
-  border-top: 0;
+  border-top: none;
+  margin-top: -4px;
+  border-radius: 0 0 8px 8px;
 }
 .container a {
   color: crimson;
